# financial-data-governance-framework

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-core.txt  requirements-full.txt
.github/workflows/: ci.yml
assets/: framework_manifest.yaml
assets/control_sets/: capital_exposure_controls.yaml  scenario_projection_controls.yaml  universal_record_controls.yaml
assets/operating_profiles/: asset_manager.yaml  capital_markets_intermediary.yaml  depository_institution.yaml  digital_finance_platform.yaml  insurer.yaml
assets/use_case_profiles/: model_governance_monitoring.yaml  regulatory_reporting_backbone.yaml  transaction_and_ledger_integrity.yaml
docs/: adoption_guide.md  architecture.md  benchmark_report.md  control_catalog.md  control_mapping.md  current_status.md  demo_and_integration_patterns.md  failure_modes.md  problem_statement.md  project_notes.md  quickstart.md  use_cases.md  whitepaper.md
docs/adr/: 0001-governance-as-code.md  0002-machine-readable-contracts.md  (+1 more)
examples/: build_artifact_bundle.py  generate_output_samples.py  lineage_config.json  run_lightweight_demo.py
governance/: __init__.py  _version.py  cli.py
sample_data/: basel3_sample.csv  gl_reference.csv
schemas/: audit_bundle.schema.json  lineage_event.schema.json
tests/: test_assets.py  test_basel3_pipeline.py  test_cli.py  test_output_samples.py  test_reporting.py  test_templates.py  test_validators.py
(+39 files in other folders)
